[0, 15, 34]: 2017-09-17
  - fix for issue 157: CDumper not dumping floats (reported by Jan Smitka)

[0, 15, 33]: 2017-08-31
  - support for "undefined" round-tripping tagged scalar objects (in addition to
    tagged mapping object). Inspired by a use case presented by Matthew Patton
    on `StackOverflow <https://stackoverflow.com/a/45967047/1307905>`__.
  - fix issue 148: replace cryptic error message when using !!timestamp with an
    incorrectly formatted or non- scalar. Reported by FichteFoll.

[0, 15, 32]: 2017-08-21
  - allow setting ``yaml.default_flow_style = None`` (default: ``False``) for
    for ``typ='rt'``.
  - fix for issue 149: multiplications on ``ScalarFloat`` now return ``float``

[0, 15, 31]: 2017-08-15
  - fix Comment dumping

[0, 15, 30]: 2017-08-14
  - fix for issue with "compact JSON" not parsing: ``{"in":{},"out":{}}``
    (reported on `StackOverflow <https://stackoverflow.com/q/45681626/1307905>`_ by
    `mjalkio <https://stackoverflow.com/users/5130525/mjalkio>`_

[0, 15, 29]: 2017-08-14
  - fix issue #51: different indents for mappings and sequences (reported by 
    Alex Harvey)
  - fix for flow sequence/mapping as element/value of block sequence with 
    sequence-indent minus dash-offset not equal two.

[0, 15, 28]: 2017-08-13
  - fix issue #61: merge of merge cannot be __repr__-ed (reported by Tal Liron)

[0, 15, 27]: 2017-08-13
  - fix issue 62, YAML 1.2 allows ``?`` and ``:`` in plain scalars if non-ambigious
    (reported by nowox)
  - fix lists within lists which would make comments disappear

[0, 15, 26]: 2017-08-10
  - fix for disappearing comment after empty flow sequence (reported by
    oit-tzhimmash)

[0, 15, 25]: 2017-08-09
  - fix for problem with dumping (unloaded) floats (reported by eyenseo)

[0, 15, 24]: 2017-08-09
  - added ScalarFloat which supports roundtripping of 23.1, 23.100,
    42.00E+56, 0.0, -0.0 etc. while keeping the format. Underscores in mantissas