@@ -1,3 +1,10 @@
+[0, 15, 35]: 2017-12-03
+  - allow ``None`` as stream when specifying ``transform`` parameters to
+    ``YAML.dump()``.
+    This is useful if the transforming function doesn't return a meaningful value
+    (inspired by `StackOverflow <https://stackoverflow.com/q/47614862/1307905>`__ by
+    `rsaw <https://stackoverflow.com/users/406281/rsaw>`__).
+
 [0, 15, 34]: 2017-09-17
   - fix for issue 157: CDumper not dumping floats (reported by Jan Smitka)
 
